{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 55,
  "lineage": "01f978ab-f0f0-1bca-a7e5-9896eaff1f25",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883105811146:internet-gateway/igw-0c7cbcd106724a299",
            "id": "igw-0c7cbcd106724a299",
            "owner_id": "883105811146",
            "region": "us-east-1",
            "tags": {
              "Name": "internet_gateway"
            },
            "tags_all": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-08767d90ba0f326a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883105811146:route-table/rtb-079840e5867893e31",
            "id": "rtb-079840e5867893e31",
            "owner_id": "883105811146",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "anusha_private_rt"
            },
            "tags_all": {
              "Name": "anusha_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08767d90ba0f326a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "883105811146",
            "id": "rtb-079840e5867893e31",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883105811146:route-table/rtb-0b8d401ff1b183e29",
            "id": "rtb-0b8d401ff1b183e29",
            "owner_id": "883105811146",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c7cbcd106724a299",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "anusha_public_rt"
            },
            "tags_all": {
              "Name": "anusha_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08767d90ba0f326a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "883105811146",
            "id": "rtb-0b8d401ff1b183e29",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0104b782493cf7ee7",
            "region": "us-east-1",
            "route_table_id": "rtb-079840e5867893e31",
            "subnet_id": "subnet-0ce208b6274506c79"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_route",
            "aws_subnet.main_private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6b5910a6e628d0f",
            "region": "us-east-1",
            "route_table_id": "rtb-0b8d401ff1b183e29",
            "subnet_id": "subnet-0616e593b5216a0bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883105811146:subnet/subnet-0ce208b6274506c79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce208b6274506c79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883105811146",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "anusha_private"
            },
            "tags_all": {
              "Name": "anusha_private"
            },
            "vpc_id": "vpc-08767d90ba0f326a3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "883105811146",
            "id": "subnet-0ce208b6274506c79",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883105811146:subnet/subnet-0616e593b5216a0bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0616e593b5216a0bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883105811146",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "anusha_public"
            },
            "tags_all": {
              "Name": "anusha_public"
            },
            "vpc_id": "vpc-08767d90ba0f326a3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "883105811146",
            "id": "subnet-0616e593b5216a0bc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883105811146:vpc/vpc-08767d90ba0f326a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f8bb68e4f789ad2e",
            "default_route_table_id": "rtb-003f45005f792256e",
            "default_security_group_id": "sg-0dbc00734c6c86d5b",
            "dhcp_options_id": "dopt-03d015675452f0079",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08767d90ba0f326a3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-003f45005f792256e",
            "owner_id": "883105811146",
            "region": "us-east-1",
            "tags": {
              "Name": "sidhu_vpc"
            },
            "tags_all": {
              "Name": "sidhu_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "883105811146",
            "id": "vpc-08767d90ba0f326a3",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}